# fingerpaint

./: Cargo.toml  Catppuccin.yaml  KittyColors.yaml  README.md  catppuccin.yaml  colors.txt  config.toml
src/: color.rs  color_file_reader.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  palette.rs  ui.rs  ui.rs.bk
src/palette/: mod.rs  reader.rs
src/ui/: keyboard.rs  mod.rs  tabline.rs  window.rs
tests/: clipboard.rs  file.rs  palette.rs
