[package]
name = "qolor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta-ext = "0.4.4"
csscolorparser = "0.6.2"
filenamify = "0.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
