[package]
name = "qolor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
copypasta-ext = "0.4.4"
crossterm = "0.27.0"
csscolorparser = "0.6.2"
cursive = "0.20.0"
filenamify = "0.1.0"
ncurses = "5.101.0"
ratatui = "0.24.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
toml = "0.8.8"
